<resources>
    <string name="app_name">layoutProjectII</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="buttonOne">Button 1</string>
    <string name="buttonTwo">Button 2</string>
    <string name="buttonThree">Button 3</string>
    <string name="textViewOne">This is my layout project!</string>
    <string name="checkBoxOne">Box 1</string>
    <string name="checkBoxTwo">Box 2</string>
    <string name="checkBoxThree">Box 3</string>
    <string name="checkBoxFour">Box 4</string>
    <string name="checkBoxFive">Box 5</string>
    <string name="checkBoxSix">Box 6</string>
    <string name="photoDesc">Yeah Buddy!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>